--- a/src/scss/partials/_sidebar.scss
+++ b/src/scss/partials/_sidebar.scss
@@ -3,7 +3,8 @@
     width: $sidebarwidth;
     float: left;
     position: absolute;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: visible;
     -webkit-overflow-scrolling: touch;
     left: 0;
     transition: left 200ms linear;
@@ -25,26 +26,27 @@
             transform: translateY(0);
         }
     }
-    .toggle {
-        z-index: 10000;
-        border: none;
-        width: 4.4rem;
-        height: 4.4rem;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-        position: fixed;
-        top: 1rem;
-        left: 1rem;
-        background: url('../img/menu.png') center center, white;
-        background-size: 60% 60%;
-        background-repeat: no-repeat;
-        display: none;
-        transition: left 200ms linear;
-        cursor: pointer;
-        &:focus {
-            outline: 0;
-        }
-        &.open {
-            left: 18rem;
-        }
+}
+
+.toggle {
+    z-index: 10000;
+    border: none;
+    width: 4.4rem;
+    height: 4.4rem;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    position: fixed;
+    top: 1rem;
+    left: 1rem;
+    background: url('../img/menu.png') center center, white;
+    background-size: 60% 60%;
+    background-repeat: no-repeat;
+    display: none;
+    transition: left 200ms linear;
+    cursor: pointer;
+    &:focus {
+        outline: 0;
+    }
+    &.open {
+        left: 18rem;
     }
 }
